quick fix for admin theme where paragraphs in front_page edit/create pages were breaking out and overlapping other form elements

--- a/components/_patterns/00-base/layouts/01-base/_d_layout.scss
+++ b/components/_patterns/00-base/layouts/01-base/_d_layout.scss
@@ -129,3 +129,7 @@ a.tabledrag-handle .handle {
 .article-lede-image-wrapper {
   margin: $space 0;
 }
+
+.paragraphs-tabs-wrapper {
+  overflow: auto;
+}
